# ChangeLog file for MonetDB5
# This file is updated with Maddlog

* Mon Jun 27 2016 Sjoerd Mullender <sjoerd@acm.org>
- Removed function BKCappend_reverse_val_wrap: it was unused.

* Thu May 26 2016 Sjoerd Mullender <sjoerd@acm.org>
- The "wrd" type has been removed from GDK and MAL.  The type was defined
  to be a 32 bit integer on 32 bit architectures and a 64 bit integer
  on 64 bit architectures.  We now generally use "lng" (always 64 bits)
  where "wrd" was used.

* Wed Apr  6 2016 Martin Kersten <mk@cwi.nl>
- Keep a collection of full traces Each time the SQL user applies
  the TRACE option, the full json trace is retained within the
  <dbpath>/<dbname>/sql_traces
