@@ -807,12 +807,10 @@ str BKCsave(bit *res, const char *const *input);
 str BKCsave2(void *r, const bat *bid);
 str BKCsetAccess(bat *res, const bat *bid, const char *const *param);
 str BKCsetColumn(void *r, const bat *bid, const char *const *tname);
-str BKCsetColumns(void *r, const bat *bid, const char *const *hname, const char *const *tname);
 str BKCsetHash(bit *ret, const bat *bid);
 str BKCsetImprints(bit *ret, const bat *bid);
 str BKCsetName(void *r, const bat *bid, const char *const *s);
 str BKCsetPersistent(void *r, const bat *bid);
-char *BKCsetRole(void *r, const bat *bid, const char *const *hname, const char *const *tname);
 str BKCsetTransient(void *r, const bat *bid);
 str BKCsetkey(bat *res, const bat *bid, const bit *param);
 str BKCshrinkBAT(bat *ret, const bat *bid, const bat *did);
